--- a/exchangis-server/src/main/resources/exchangis.properties
+++ b/exchangis-server/src/main/resources/exchangis.properties
@@ -20,9 +20,9 @@ wds.linkis.test.mode=true
 
 wds.linkis.server.mybatis.datasource.url=jdbc:mysql://localhost:3306/exchangis_v3?useSSL=false&characterEncoding=UTF-8
 
-wds.linkis.server.mybatis.datasource.username=root
+wds.linkis.server.mybatis.datasource.username=
 
-wds.linkis.server.mybatis.datasource.password=123456
+wds.linkis.server.mybatis.datasource.password=
 
 wds.linkis.log.clear=true
 
