--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
 		<module>exchangis-plugins</module>
 		<module>exchangis-server</module>
 		<module>assembly-package</module>
+        <module>exchangis-engines</module>
     </modules>
 	<dependencyManagement>
 		<dependencies>
