Modify ddl and dml, add restful interface limit switch, add transform function.

--- a/assembly-package/config/application-exchangis.yml
+++ b/assembly-package/config/application-exchangis.yml
@@ -6,7 +6,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://{IP}:{PORT}/eureka/
+      defaultZone: http://192.168.1.213:20303/eureka/
   instance:
     metadata-map:
       test: wedatasphere
