--- a/exchangis-engines/engineconn-plugins/datax/pom.xml
+++ b/exchangis-engines/engineconn-plugins/datax/pom.xml
@@ -13,11 +13,19 @@
     <artifactId>linkis-engineplugin-datax</artifactId>
 
     <properties>
+        <datax.engine.version>3.0.0-Plus-2</datax.engine.version>
         <datax.version>3.0.0</datax.version>
         <hadoop.version>2.7.2</hadoop.version>
         <linkis.version>1.1.1</linkis.version>
+        <commons-cli-version>1.2</commons-cli-version>
+        <commons-configuration-version>1.10</commons-configuration-version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.webank.wedatasphere.exchangis</groupId>
+            <artifactId>datax-core</artifactId>
+            <version>${datax.engine.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.linkis</groupId>
             <artifactId>linkis-once-engineconn</artifactId>
@@ -33,6 +41,16 @@
             <artifactId>linkis-common</artifactId>
             <version>${linkis.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>${commons-cli-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>${commons-configuration-version}</version>
         </dependency>
     </dependencies>
     <build>
