--- a/exchangis-engines/pom.xml
+++ b/exchangis-engines/pom.xml
@@ -15,7 +15,8 @@
 
     <modules>
         <module>exchangis-engine-core</module>
-        <module>engineconn-plugins/datax</module>
+        <module>exchangis-engine-server</module>
+<!--        <module>engineconn-plugins/datax</module>-->
     </modules>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
