--- a/exchangis-job/exchangis-job-common/pom.xml
+++ b/exchangis-job/exchangis-job-common/pom.xml
@@ -23,6 +23,11 @@
             <version>${linkis.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.webank.wedatasphere.exchangis</groupId>
+            <artifactId>exchangis-engine-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.linkis</groupId>
             <artifactId>linkis-protocol</artifactId>
             <version>${linkis.version}</version>
