--- a/exchangis-engines/engineconn-plugins/datax/src/main/resources/linkis-engineconn.properties
+++ b/exchangis-engines/engineconn-plugins/datax/src/main/resources/linkis-engineconn.properties
@@ -19,5 +19,38 @@ wds.linkis.engineconn.debug.enable=true
 wds.linkis.engineconn.plugin.default.class=org.apache.linkis.engineconnplugin.datax.DataxEngineConnPlugin
 wds.linkis.engine.connector.hooks=org.apache.linkis.engineconn.computation.executor.hook.ComputationEngineConnHook,org.apache.linkis.engineconn.computation.executor.hook.JarUdfEngineHook
 
-//todo check is need
-wds.linkis.engineconn.executor.manager.class=org.apache.linkis.engineconnplugin.datax.executormanager.DataxExecutorManager
+server.address=
+core.dataXServer.address=
+core.dataXServer.timeout=10000
+core.dataXServer.protocol="http"
+core.dataXServer.endpoint.report="/report"
+core.dataXServer.endpoint.report.state="/report/state"
+core.dataXServer.reportDataxLog=false
+core.dataXServer.reportPerfLog=false
+core.transport.type="record"
+core.transport.channel.speed.byte=5242880
+core.transport.channel.speed.record=10000
+core.transport.channel.flowControlInterval=20
+core.transport.channel.capacity=512
+core.transport.channel.byteCapacity=67108864
+core.transport.record.channel.class="com.alibaba.datax.core.transport.channel.memory.MemoryRecordChannel"
+core.transport.record.exchanger.class="com.alibaba.datax.core.plugin.BufferedRecordExchanger"
+core.transport.record.exchanger.bufferSize=32
+core.transport.stream.channel.class="com.webank.wedatasphere.exchangis.datax.core.transport.channel.memory.MemoryStreamChannel"
+core.transport.stream.channel.bufferSize=8192
+core.container.job.reportInterval=5000
+core.container.job.sleepInterval=5000
+core.container.taskGroup.reportInterval=5000
+core.container.taskGroup.sleepInterval=100
+core.container.taskGroup.channel=5
+core.container.trace.enable=false
+core.statistics.collector.plugin.taskClass="com.alibaba.datax.core.statistics.plugin.task.StdoutPluginCollector"
+core.statistics.collector.plugin.maxDirtyNumber=10
+core.processor.loader.plugin.class="com.webank.wedatasphere.exchangis.datax.core.processor.loader.plugin.DefaultPluginProcessorLoader"
+core.processor.loader.plugin.package="com.webank.wedatasphere.exchangis.datax.core.processor.impl"
+core.processor.loader.plugin.sourcePath="proc/src"
+
+datax.active.heart.beat=5
+idle.active.heart.beat=60
+wait.alloc.timeInSec=5
+executor.job.engine.datax.home=
