Complete Datax EngineConn plugin.

--- a/exchangis-engines/engineconn-plugins/datax/pom.xml
+++ b/exchangis-engines/engineconn-plugins/datax/pom.xml
@@ -24,6 +24,20 @@
             <groupId>com.webank.wedatasphere.exchangis</groupId>
             <artifactId>datax-core</artifactId>
             <version>${datax.engine.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>hadoop-annotations</artifactId>
+                    <groupId>org.apache.hadoop</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>fastjson</artifactId>
+                    <groupId>com.alibaba</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>hadoop-common</artifactId>
+                    <groupId>org.apache.hadoop</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.linkis</groupId>
