Replace the fastjson with jackson in datax.

--- a/exchangis-engines/engines/datax/datax-core/pom.xml
+++ b/exchangis-engines/engines/datax/datax-core/pom.xml
@@ -19,8 +19,12 @@
             <version>1.0.15</version>
         </dependency>
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
         <dependency>
             <groupId>commons-configuration</groupId>
