--- a/exchangis-engines/engineconn-plugins/datax/pom.xml
+++ b/exchangis-engines/engineconn-plugins/datax/pom.xml
@@ -16,6 +16,11 @@
         <datax.engine.version>3.0.0-Plus-2</datax.engine.version>
         <datax.version>3.0.0</datax.version>
         <hadoop.version>2.7.2</hadoop.version>
+        <druid.version>1.0.15</druid.version>
+        <groovy.version>2.1.9</groovy.version>
+        <aircompressor.version>0.3</aircompressor.version>
+        <lzo.version>1.0.5</lzo.version>
+        <csv.version>2.0</csv.version>
         <commons-cli-version>1.2</commons-cli-version>
         <commons-configuration-version>1.10</commons-configuration-version>
     </properties>
@@ -38,6 +43,31 @@
                     <groupId>org.apache.hadoop</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.javacsv</groupId>
+            <artifactId>javacsv</artifactId>
+            <version>${csv.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>${druid.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>${groovy.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.airlift</groupId>
+            <artifactId>aircompressor</artifactId>
+            <version>${aircompressor.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.anarres.lzo</groupId>
+            <artifactId>lzo-core</artifactId>
+            <version>${lzo.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.linkis</groupId>
