--- a/exchangis-engines/engineconn-plugins/datax/src/main/resources/linkis-engineconn.properties
+++ b/exchangis-engines/engineconn-plugins/datax/src/main/resources/linkis-engineconn.properties
@@ -17,19 +17,19 @@ wds.linkis.server.version=v1
 #wds.linkis.engineconn.debug.enable=true
 #wds.linkis.keytab.enable=true
 wds.linkis.engineconn.plugin.default.class=org.apache.linkis.engineconnplugin.datax.DataxEngineConnPlugin
-wds.linkis.engine.connector.hooks=org.apache.linkis.engineconn.computation.executor.hook.ComputationEngineConnHook
+wds.linkis.engine.connector.hooks=org.apache.linkis.engineconn.once.executor.hook.OnceEngineConnHook
 
 # Core configuration
-#core.transport.type="record"
+#core.transport.type=record
 #core.transport.channel.speed.byte=5242880
 #core.transport.channel.speed.record=10000
 #core.transport.channel.flowControlInterval=20
 #core.transport.channel.capacity=512
 #core.transport.channel.byteCapacity=67108864
-#core.transport.record.channel.class="com.alibaba.datax.core.transport.channel.memory.MemoryRecordChannel"
-#core.transport.record.exchanger.class="com.alibaba.datax.core.plugin.BufferedRecordExchanger"
+#core.transport.record.channel.class=com.alibaba.datax.core.transport.channel.memory.MemoryRecordChannel
+#core.transport.record.exchanger.class=com.alibaba.datax.core.plugin.BufferedRecordExchanger
 #core.transport.record.exchanger.bufferSize=32
-#core.transport.stream.channel.class="com.webank.wedatasphere.exchangis.datax.core.transport.channel.memory.MemoryStreamChannel"
+#core.transport.stream.channel.class=com.webank.wedatasphere.exchangis.datax.core.transport.channel.memory.MemoryStreamChannel
 #core.transport.stream.channel.bufferSize=8192
 #core.container.job.reportInterval=5000
 #core.container.job.sleepInterval=5000
@@ -37,8 +37,8 @@ wds.linkis.engine.connector.hooks=org.apache.linkis.engineconn.computation.execu
 #core.container.taskGroup.sleepInterval=100
 #core.container.taskGroup.channel=5
 #core.container.trace.enable=false
-#core.statistics.collector.plugin.taskClass="com.alibaba.datax.core.statistics.plugin.task.StdoutPluginCollector"
+#core.statistics.collector.plugin.taskClass=com.alibaba.datax.core.statistics.plugin.task.StdoutPluginCollector
 #core.statistics.collector.plugin.maxDirtyNumber=10
-#core.processor.loader.plugin.class="com.webank.wedatasphere.exchangis.datax.core.processor.loader.plugin.DefaultPluginProcessorLoader"
-#core.processor.loader.plugin.package="com.webank.wedatasphere.exchangis.datax.core.processor.impl"
-#core.processor.loader.plugin.sourcePath="proc/src"
+#core.processor.loader.plugin.class=com.webank.wedatasphere.exchangis.datax.core.processor.loader.plugin.DefaultPluginProcessorLoader
+#core.processor.loader.plugin.package=com.webank.wedatasphere.exchangis.datax.core.processor.impl
+#core.processor.loader.plugin.sourcePath=proc/src
