--- a/exchangis-datasource/exchangis-datasource-service/pom.xml
+++ b/exchangis-datasource/exchangis-datasource-service/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>exchangis-job-common</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.webank.wedatasphere.exchangis</groupId>
+            <artifactId>exchangis-engine-core</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
