--- a/assembly-package/config/exchangis-server.properties
+++ b/assembly-package/config/exchangis-server.properties
@@ -34,7 +34,7 @@ wds.exchangis.datasource.client.dws.version=v1
 # launcher client
 wds.exchangis.client.linkis.server-url=http://{LINKIS_IP}:{LINKIS_PORT}/
 wds.exchangis.client.linkis.token.value=EXCHANGIS-AUTH
-wds.exchangis.datasource.extension.dir=exchangis-extds
+wds.exchangis.datasource.extension.dir=exchangis-extds/
 
 ##restful
 wds.linkis.server.restful.scan.packages=com.webank.wedatasphere.exchangis.datasource.server.restful.api,\
