Resolve the concurrent problem of submitting task. Break the limit of retry times of submitting.

--- a/assembly-package/config/exchangis-server.properties
+++ b/assembly-package/config/exchangis-server.properties
@@ -15,7 +15,7 @@
 #
 #
 
-wds.linkis.server.mybatis.datasource.url=jdbc:mysql://{IP}:{PORT}/{database}?useSSL=false&characterEncoding=UTF-8&allowMultiQueries=true
+wds.linkis.server.mybatis.datasource.url=jdbc:mysql://{IP}:{PORT}/{database}?useSSL=false&characterEncoding=UTF-8&allowMultiQueries=true&useAffectedRows=true
 
 wds.linkis.server.mybatis.datasource.username={username}
 
