Update deploy scripts

--- a/assembly-package/sbin/env.properties
+++ b/assembly-package/sbin/env.properties
@@ -1,4 +1,4 @@
-EXCHANGIS_CONF_PATH=/appcom/config/exchangis-config
-EXCHANGIS_LOG_PATH=/appcom/logs/exchangis
-MODULE_DEFAULT_PREFIX="dss-exchangis-main-"
-MODULE_DEFAULT_SUFFIX="-dev"
+EXCHANGIS_CONF_PATH="/appcom/config/exchangis-config"
+EXCHANGIS_LOG_PATH="/appcom/logs/exchangis-log"
+MODULE_DEFAULT_PREFIX="exchangis-server"
+MODULE_DEFAULT_SUFFIX=""
