Add oracle datasource

--- a/exchangis-datasource/pom.xml
+++ b/exchangis-datasource/pom.xml
@@ -24,7 +24,9 @@
         <module>extension-datasources/exchangis-datasource-ext-sftp</module>
         <module>extension-datasources/exchangis-datasource-ext-elasticsearch</module>
         <module>extension-datasources/exchangis-datasource-ext-mongodb</module>
+        <module>extension-datasources/exchangis-datasource-ext-oracle</module>
         <module>exchangis-datasource-server</module>
+        <module>extension-datasources/exchangis-datasource-ext-oracle</module>
     </modules>
 
     <properties>
