--- a/exchangis-engines/engines/datax/datax-oraclereader/pom.xml
+++ b/exchangis-engines/engines/datax/datax-oraclereader/pom.xml
@@ -49,7 +49,7 @@
             <artifactId>ojdbc6</artifactId>
             <version>11.2.0.3</version>
             <scope>system</scope>
-            <systemPath>${basedir}/src/main/lib/ojdbc6-11.2.0.3.jar</systemPath>
+            <systemPath>${pom.basedir}/src/main/lib/ojdbc6-11.2.0.3.jar</systemPath>
         </dependency>
     </dependencies>
     <build>
