--- a/exchangis-engines/engines/datax/datax-oraclewriter/pom.xml
+++ b/exchangis-engines/engines/datax/datax-oraclewriter/pom.xml
@@ -46,7 +46,7 @@
             <artifactId>ojdbc6</artifactId>
             <version>11.2.0.3</version>
             <scope>system</scope>
-            <systemPath>${basedir}/src/main/lib/ojdbc6-11.2.0.3.jar</systemPath>
+            <systemPath>${pom.basedir}/src/main/lib/ojdbc6-11.2.0.3.jar</systemPath>
         </dependency>
     </dependencies>
 
@@ -70,7 +70,7 @@
                     <appendAssemblyId>false</appendAssemblyId>
                     <attach>false</attach>
                     <descriptors>
-                        <descriptor>${basedir}/src/main/assembly/package.xml</descriptor>
+                        <descriptor>${pom.basedir}/src/main/assembly/package.xml</descriptor>
                     </descriptors>
                     <finalName>plugin</finalName>
                 </configuration>
