--- a/exchangis-engines/engines/datax/datax-hdfsreader/pom.xml
+++ b/exchangis-engines/engines/datax/datax-hdfsreader/pom.xml
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>datax-hdfsreader</artifactId>
     <packaging>jar</packaging>
-    <version>${datax.engine.version}</version>
+    <version>3.0.0-Plus-2</version>
     <properties>
         <hive.version>1.2.1</hive.version>
         <hadoop.version>2.7.2</hadoop.version>
