--- a/web/package.json
+++ b/web/package.json
@@ -59,7 +59,8 @@
     "ant-design-vue": "^2.2.7",
     "echarts": "^5.2.1",
     "lodash-es": "4.17.21",
-    "moment": "2.29.1",
+    "moment": "^2.29.4",
+    "monaco-editor": "^0.34.0",
     "vue": "^3.1.0",
     "vue-request": "^1.2.0"
   },
