--- a/exchangis-server/pom.xml
+++ b/exchangis-server/pom.xml
@@ -61,6 +61,12 @@
             <groupId>org.apache.linkis</groupId>
             <artifactId>linkis-module</artifactId>
         </dependency>
+        <!--classmate-->
+        <dependency>
+            <groupId>com.fasterxml</groupId>
+            <artifactId>classmate</artifactId>
+            <version>1.5.1</version>
+        </dependency>
     </dependencies>
 
     <build>
