--- a/web/package.json
+++ b/web/package.json
@@ -61,6 +61,7 @@
     "lodash-es": "4.17.21",
     "moment": "^2.29.4",
     "monaco-editor": "^0.34.0",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "vue": "^3.1.0",
     "vue-request": "^1.2.0"
   },
