--- a/exchangis-engines/engineconn-plugins/sqoop/pom.xml
+++ b/exchangis-engines/engineconn-plugins/sqoop/pom.xml
@@ -30,6 +30,7 @@
     <properties>
         <sqoop.version>1.4.6</sqoop.version>
         <hive.version>3.1.2</hive.version>
+        <hadoop.version>2.7.2</hadoop.version>
         <linkis.version>1.1.6-webank</linkis.version>
     </properties>
 
@@ -213,17 +214,6 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.linkis</groupId>
-            <artifactId>linkis-bml-engine-hook</artifactId>
-            <version>${linkis.version}</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>commons-logging</artifactId>
-                    <groupId>commons-logging</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
     </dependencies>
 
     <build>
