--- a/assembly-package/pom.xml
+++ b/assembly-package/pom.xml
@@ -31,6 +31,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-install-plugin</artifactId>
+				<version>2.4</version>
 				<configuration>
 					<skip>true</skip>
 				</configuration>
@@ -38,6 +39,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.3</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
