--- a/exchangis-plugins/exchangis-appconn/pom.xml
+++ b/exchangis-plugins/exchangis-appconn/pom.xml
@@ -74,6 +74,11 @@
             <version>${dss.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.10</version>
+        </dependency>
     </dependencies>
 
     <build>
