--- a/exchangis-job/exchangis-job-service/pom.xml
+++ b/exchangis-job/exchangis-job-service/pom.xml
@@ -5,21 +5,29 @@
     <parent>
         <artifactId>exchangis</artifactId>
         <groupId>com.webank.wedatasphere.exchangis</groupId>
-        <version>1.1.2</version>
+        <version>1.1.1</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>exchangis-project</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>exchangis-project-server</module>
-        <module>exchangis-project-provider</module>
-        <module>exchangis-project-entity</module>
-    </modules>
+    <artifactId>exchangis-job-service</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.webank.wedatasphere.exchangis</groupId>
+            <artifactId>exchangis-job-common</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.webank.wedatasphere.exchangis</groupId>
+            <artifactId>exchangis-job-launcher</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+    </dependencies>
 
 </project>
