--- a/exchangis-server/src/main/resources/exchangis.properties
+++ b/exchangis-server/src/main/resources/exchangis.properties
@@ -34,7 +34,7 @@ wds.exchangis.datasource.client.authtoken.key=hdfs
 wds.exchangis.datasource.client.authtoken.value=exchangis-auth
 wds.exchangis.datasource.client.dws.version=v1
 
-wds.exchangis.datasource.extension.dir=exchangis-extds
+wds.exchangis.datasource.extension.dir=exchangis-extds/
 
 ##restful
 wds.linkis.server.restful.scan.packages=com.webank.wedatasphere.exchangis.datasource.server.restful.api,\
