--- a/exchangis-engines/engines/datax/datax-hdfsreader/pom.xml
+++ b/exchangis-engines/engines/datax/datax-hdfsreader/pom.xml
@@ -13,13 +13,12 @@
     <packaging>jar</packaging>
     <version>3.0.0-Plus-2</version>
     <properties>
-        <hive.version>1.2.1</hive.version>
-        <hadoop.version>2.7.2</hadoop.version>
-        <hbase.version>1.2.2</hbase.version>
+        <hive.version>3.1.3</hive.version>
+        <hadoop.version>3.3.4</hadoop.version>
+        <hbase.version>2.5.5</hbase.version>
         <xerces.version>2.9.1</xerces.version>
     </properties>
     <dependencies>
-
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
             <artifactId>datax-core</artifactId>
@@ -108,6 +107,10 @@
             <artifactId>hbase-server</artifactId>
             <version>${hbase.version}</version>
             <exclusions>
+                <exclusion>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-hdfs</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
