--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,8 @@
 	<properties>
 		<exchangis.version>1.1.2</exchangis.version>
 		<dss.version>1.1.2</dss.version>
-		<linkis.version>1.4.0-SNAPSHOT</linkis.version>
-		<linkis.datasource.version>1.4.0-SNAPSHOT</linkis.datasource.version>
+		<linkis.version>1.4.0</linkis.version>
+		<linkis.datasource.version>1.4.0</linkis.datasource.version>
 		<streamis.version>0.1.0-SNAPSHOT</streamis.version>
 		<scala.version>2.12.12</scala.version>
 		<scala-maven-plugin.version>4.7.1</scala-maven-plugin.version>
