--- a/assembly-package/pom.xml
+++ b/assembly-package/pom.xml
@@ -21,7 +21,8 @@
 	<parent>
 		<artifactId>exchangis</artifactId>
 		<groupId>com.webank.wedatasphere.exchangis</groupId>
-		<version>1.1.2</version>
+		<version>${revision}</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>assembly-package</artifactId>
@@ -62,7 +63,7 @@
 						</goals>
 						<configuration>
 							<skipAssembly>false</skipAssembly>
-							<finalName>wedatasphere-exchangis-${exchangis.version}</finalName>
+							<finalName>wedatasphere-exchangis-${revision}</finalName>
 							<appendAssemblyId>false</appendAssemblyId>
 							<attach>false</attach>
 							<descriptors>
