--- a/exchangis-datasource/exchangis-datasource-core/pom.xml
+++ b/exchangis-datasource/exchangis-datasource-core/pom.xml
@@ -5,7 +5,8 @@
     <parent>
         <artifactId>exchangis-datasource</artifactId>
         <groupId>com.webank.wedatasphere.exchangis</groupId>
-        <version>1.1.2</version>
+        <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -20,7 +21,7 @@
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
             <artifactId>exchangis-dao</artifactId>
-            <version>1.1.2</version>
+            <version>${revision}</version>
         </dependency>
 
 
