--- a/exchangis-datasource/exchangis-datasource-server/pom.xml
+++ b/exchangis-datasource/exchangis-datasource-server/pom.xml
@@ -5,7 +5,8 @@
     <parent>
         <artifactId>exchangis-datasource</artifactId>
         <groupId>com.webank.wedatasphere.exchangis</groupId>
-        <version>1.1.2</version>
+        <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -20,13 +21,13 @@
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
             <artifactId>exchangis-datasource-service</artifactId>
-            <version>1.1.2</version>
+            <version>${revision}</version>
         </dependency>
 
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
             <artifactId>exchangis-datasource-loader</artifactId>
-            <version>1.1.2</version>
+            <version>${revision}</version>
         </dependency>
 
     </dependencies>
