--- a/exchangis-datasource/extension-datasources/exchangis-datasource-ext-hive/pom.xml
+++ b/exchangis-datasource/extension-datasources/exchangis-datasource-ext-hive/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>exchangis-datasource</artifactId>
         <groupId>com.webank.wedatasphere.exchangis</groupId>
-        <version>1.1.2</version>
+        <version>${revision}</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -22,17 +22,17 @@
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
             <artifactId>exchangis-dao</artifactId>
-            <version>1.1.2</version>
+            <version>${revision}</version>
         </dependency>
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
             <artifactId>exchangis-datasource-linkis</artifactId>
-            <version>1.1.2</version>
+            <version>${revision}</version>
         </dependency>
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
             <artifactId>exchangis-dao</artifactId>
-            <version>1.1.2</version>
+            <version>${revision}</version>
         </dependency>
     </dependencies>
 
