--- a/exchangis-engines/engines/datax/datax-oraclewriter/pom.xml
+++ b/exchangis-engines/engines/datax/datax-oraclewriter/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>exchangis-engine-datax</artifactId>
         <groupId>com.webank.wedatasphere.exchangis</groupId>
-        <version>1.1.2</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
