--- a/exchangis-engines/exchangis-engine-common/pom.xml
+++ b/exchangis-engines/exchangis-engine-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>exchangis-engines</artifactId>
         <groupId>com.webank.wedatasphere.exchangis</groupId>
-        <version>1.1.2</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
             <artifactId>exchangis-dao</artifactId>
-            <version>${exchangis.version}</version>
+            <version>${revision}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.linkis</groupId>
