--- a/exchangis-engines/exchangis-engine-server/pom.xml
+++ b/exchangis-engines/exchangis-engine-server/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>exchangis-engines</artifactId>
         <groupId>com.webank.wedatasphere.exchangis</groupId>
-        <version>1.1.2</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -20,12 +20,12 @@
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
             <artifactId>exchangis-dao</artifactId>
-            <version>${exchangis.version}</version>
+            <version>${revision}</version>
         </dependency>
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
             <artifactId>exchangis-engine-core</artifactId>
-            <version>${exchangis.version}</version>
+            <version>${revision}</version>
         </dependency>
     </dependencies>
     <build>
