--- a/exchangis-engines/pom.xml
+++ b/exchangis-engines/pom.xml
@@ -5,13 +5,14 @@
     <parent>
         <artifactId>exchangis</artifactId>
         <groupId>com.webank.wedatasphere.exchangis</groupId>
-        <version>1.1.2</version>
+        <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>exchangis-engines</artifactId>
     <packaging>pom</packaging>
-    <version>1.1.2</version>
+    <version>${revision}</version>
 
     <modules>
         <module>exchangis-engine-common</module>
