--- a/exchangis-project/exchangis-project-entity/pom.xml
+++ b/exchangis-project/exchangis-project-entity/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>exchangis-project</artifactId>
         <groupId>com.webank.wedatasphere.exchangis</groupId>
-        <version>1.1.2</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
             <artifactId>exchangis-dao</artifactId>
-            <version>1.1.2</version>
+            <version>${revision}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
