--- a/exchangis-server/pom.xml
+++ b/exchangis-server/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>exchangis</artifactId>
         <groupId>com.webank.wedatasphere.exchangis</groupId>
-        <version>1.1.2</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -20,12 +20,12 @@
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
             <artifactId>exchangis-datasource-server</artifactId>
-            <version>1.1.2</version>
+            <version>${revision}</version>
         </dependency>
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
             <artifactId>exchangis-engine-server</artifactId>
-            <version>${exchangis.version}</version>
+            <version>${revision}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.linkis</groupId>
@@ -40,20 +40,20 @@
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
             <artifactId>exchangis-job-server</artifactId>
-            <version>1.1.2</version>
+            <version>${revision}</version>
         </dependency>
         <!--
         metrics interface, wait for audit
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
             <artifactId>exchangis-job-metrics</artifactId>
-            <version>1.1.2</version>
+            <version>${revision}</version>
         </dependency>
         -->
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
             <artifactId>exchangis-project-server</artifactId>
-            <version>1.1.2</version>
+            <version>${revision}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.linkis</groupId>
