--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
 	<groupId>com.webank.wedatasphere.exchangis</groupId>
 	<artifactId>exchangis</artifactId>
-	<version>1.1.2</version>
+	<version>${revision}</version>
 	<packaging>pom</packaging>
 
 	<name>exchangis</name>
@@ -37,10 +37,10 @@
 	</licenses>
 
 	<properties>
-		<exchangis.version>1.1.2</exchangis.version>
+		<revision>1.1.3-webank</revision>
 		<dss.version>1.1.2</dss.version>
-		<linkis.version>1.4.0</linkis.version>
-		<linkis.datasource.version>1.4.0</linkis.datasource.version>
+		<linkis.version>1.3.0-wds</linkis.version>
+		<linkis.datasource.version>1.3.0-wds</linkis.datasource.version>
 		<streamis.version>0.1.0-SNAPSHOT</streamis.version>
 		<scala.version>2.12.12</scala.version>
 		<scala-maven-plugin.version>4.7.1</scala-maven-plugin.version>
