Add datasource type of starrocks

--- a/exchangis-datasource/pom.xml
+++ b/exchangis-datasource/pom.xml
@@ -25,6 +25,7 @@
         <module>extension-datasources/exchangis-datasource-ext-elasticsearch</module>
         <module>extension-datasources/exchangis-datasource-ext-mongodb</module>
         <module>extension-datasources/exchangis-datasource-ext-oracle</module>
+        <module>extension-datasources/exchangis-datasource-ext-starrocks</module>
         <module>exchangis-datasource-server</module>
     </modules>
 
