Enable to fetch remote log.

--- a/assembly-package/config/dss-exchangis-server.properties
+++ b/assembly-package/config/dss-exchangis-server.properties
@@ -26,6 +26,9 @@ wds.linkis.gateway.url=http://{LINKIS_IP}:{LINKIS_PORT}/
 wds.linkis.log.clear=true
 wds.linkis.server.version=v1
 
+# server rpc
+wds.linkis.ms.service.scan.package=com.webank.wedatasphere.exchangis
+
 # datasource client
 wds.exchangis.datasource.client.serverurl=http://{LINKIS_IP}:{LINKIS_PORT}/
 wds.exchangis.datasource.client.authtoken.key=EXCHANGIS-AUTH
