--- a/exchangis-job/exchangis-job-server/pom.xml
+++ b/exchangis-job/exchangis-job-server/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.49</version>
         </dependency>
+        <!--rpc-->
+        <dependency>
+            <groupId>org.apache.linkis</groupId>
+            <artifactId>linkis-rpc</artifactId>
+            <version>${linkis.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
