Enhance start scripts and add job param config for starrocks

--- a/assembly-package/sbin/env.properties
+++ b/assembly-package/sbin/env.properties
@@ -2,3 +2,5 @@ EXCHANGIS_CONF_PATH=/appcom/config/exchangis-config/background
 EXCHANGIS_LOG_PATH=/appcom/logs/exchangis/background
 MODULE_DEFAULT_PREFIX="dss-exchangis-main-"
 MODULE_DEFAULT_SUFFIX="-dev"
+DEBUG_MODE=false
+DEBUG_PORT=8321
