Adjust the class structure of data source; Custom the http client;

--- a/assembly-package/config/dss-exchangis-server.properties
+++ b/assembly-package/config/dss-exchangis-server.properties
@@ -30,9 +30,8 @@ wds.linkis.server.version=v1
 wds.linkis.ms.service.scan.package=com.webank.wedatasphere.exchangis
 
 # datasource client
-wds.exchangis.datasource.client.serverurl=http://{LINKIS_IP}:{LINKIS_PORT}/
-wds.exchangis.datasource.client.authtoken.key=EXCHANGIS-AUTH
-wds.exchangis.datasource.client.authtoken.value=EXCHANGIS-AUTH
+wds.exchangis.datasource.client.server-url=http://{LINKIS_IP}:{LINKIS_PORT}/
+wds.exchangis.datasource.client.token.value=EXCHANGIS-AUTH
 wds.exchangis.datasource.client.dws.version=v1
 
 # launcher client
