--- a/exchangis-dao/pom.xml
+++ b/exchangis-dao/pom.xml
@@ -28,6 +28,10 @@
             <artifactId>linkis-module</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.linkis</groupId>
+            <artifactId>linkis-gateway-httpclient-support</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>${hibernate.validator}</version>
