--- a/exchangis-datasource/exchangis-datasource-streamis/pom.xml
+++ b/exchangis-datasource/exchangis-datasource-streamis/pom.xml
@@ -23,7 +23,11 @@
             <artifactId>exchangis-datasource-core</artifactId>
             <version>${revision}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.webank.wedatasphere.exchangis</groupId>
+            <artifactId>exchangis-datasource-linkis</artifactId>
+            <version>${revision}</version>
+        </dependency>
     </dependencies>
 
     <build>
