--- a/exchangis-engines/engines/datax/datax-core/pom.xml
+++ b/exchangis-engines/engines/datax/datax-core/pom.xml
@@ -147,7 +147,7 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
-            <version>${hadoop.version}</version>
+            <version>3.3.4</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.commons</groupId>
